--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -46,8 +46,7 @@
                 </mat-card>
             </mat-expansion-panel>
             <!--   COMPONENTE MORFOLÓGICA -->
-            <mat-expansion-panel (click)="changeMorfoExpanded()" 
-                                 [expanded]="morfoExpanded">
+            <mat-expansion-panel (click)="changeMorfoExpanded()" [expanded]="morfoExpanded">
                 <mat-expansion-panel-header>
                     <mat-panel-title i18n="Title | area de avaliação">
                         COMPONENTE MORFOLÓGICA
@@ -142,8 +141,7 @@
                     </mat-card-header>
                 </mat-card>
             </mat-expansion-panel>
-            <mat-expansion-panel (click)="changeVideoExpanded()" 
-            [expanded]="videoExpanded">
+            <mat-expansion-panel>
                 <mat-expansion-panel-header routerLink="/ortop/">
                     <mat-panel-title i18n="Title">
                         TESTES ORTOPÉDICOS &nbsp;&nbsp;&nbsp; [videos]
