--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -48,7 +48,7 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="pescoco" #pescoco="ngModel" [(ngModel)]="newEvaluation.pescoco"
-                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture>
+                                    type="number" cdkTrapFocus cdkTrapFocusAutoCapture (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr>
@@ -67,26 +67,26 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="antebracod" #antebracod="ngModel" [(ngModel)]="newEvaluation.antebracod"
-                                    type="number">
+                                    type="number" (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openHelpDialog('Cintura')">Cintura</span></th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
-                                {{evaluation[pointer-1].abdomen | number: '': locale}}</td>
+                                {{evaluation[pointer-1].cintura | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
-                                <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
                                     type="number" (focus)="$event.target.select()">
                             </td>
                             <td *ngIf="pointer>=0 && editPointer!=0">
-                                {{evaluation[pointer].abdomen | number: '': locale}}</td>
+                                {{evaluation[pointer].cintura | number: '': locale}}</td>
                             <td *ngIf="editPointer==0 && editAv">
-                                <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
                                     type="number" (focus)="$event.target.select()">
                             </td>
                             <td *ngIf="addEval">
-                                <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
-                                    type="number">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr>
@@ -105,7 +105,7 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number">
+                                    type="number" (focus)="$event.target.select()">
                             </td>
                         </tr>
 
@@ -125,7 +125,7 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril"
-                                    type="number">
+                                    type="number" (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr>
