--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -14,7 +14,7 @@
                         <div class="flex-radio-group">
                             <mat-radio-group aria-label="Select an option" #parq1="ngModel" name="parq1"
                                 [(ngModel)]="student.parq1" (change)="calcRisco(f.value)"
-                                cdkTrapFocus cdkTrapFocusAutoCapture>
+                                cdkTrapFocus cdkTrapFocusAutoCapture required>
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
                             </mat-radio-group>
@@ -26,7 +26,7 @@
                     <mat-card-content>
                         <p i18n>2) Você sente dor no peito quando realiza uma atividade física?</p>
                         <div class="flex-radio-group">
-                            <mat-radio-group aria-label="Select an option" #parq2="ngModel" name="parq2"
+                            <mat-radio-group aria-label="Select an option" #parq2="ngModel" name="parq2"  required
                                 [(ngModel)]="student.parq2" (change)="calcRisco(f.value)">
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
@@ -40,7 +40,7 @@
                             física?
                         </p>
                         <div class="flex-radio-group">
-                            <mat-radio-group aria-label="Select an option" #parq3="ngModel" name="parq3"
+                            <mat-radio-group aria-label="Select an option" #parq3="ngModel" name="parq3"  required
                                 [(ngModel)]="student.parq3" (change)="calcRisco(f.value)">
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
@@ -54,7 +54,7 @@
                         <p i18n>4) Você perdeu o equilíbrio em virtude de uma tontura ou já perdeu a consciência?
                         </p>
                         <div class="flex-radio-group">
-                            <mat-radio-group aria-label="Select an option" #parq4="ngModel" name="parq4"
+                            <mat-radio-group aria-label="Select an option" #parq4="ngModel" name="parq4"  required
                                 [(ngModel)]="student.parq4" (change)="calcRisco(f.value)">
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
@@ -69,7 +69,7 @@
                             mudança
                             em sua atividade física?</p>
                         <div class="flex-radio-group">
-                            <mat-radio-group aria-label="Select an option" #parq5="ngModel" name="parq5"
+                            <mat-radio-group aria-label="Select an option" #parq5="ngModel" name="parq5"  required
                                 [(ngModel)]="student.parq5" (change)="calcRisco(f.value)">
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
@@ -84,7 +84,7 @@
                             a
                             pressão arterial ou algum problema cardíaco?</p>
                         <div class="flex-radio-group">
-                            <mat-radio-group aria-label="Select an option" #parq6="ngModel" name="parq6"
+                            <mat-radio-group aria-label="Select an option" #parq6="ngModel" name="parq6"  required
                                 [(ngModel)]="student.parq6" (change)="calcRisco(f.value)">
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
@@ -98,7 +98,7 @@
                         <p i18n>7) Você está a par de alguma outra razão pela qual não deveria realizar uma atividade
                             física?</p>
                         <div class="flex-radio-group">
-                            <mat-radio-group aria-label="Select an option" #parq7="ngModel" name="parq7"
+                            <mat-radio-group aria-label="Select an option" #parq7="ngModel" name="parq7"  required
                                 [(ngModel)]="student.parq7" (change)="calcRisco(f.value)">
                                 <mat-radio-button value="1" i18n>Sim</mat-radio-button>
                                 <mat-radio-button value="0" i18n>Não</mat-radio-button>
@@ -111,7 +111,7 @@
                 <em i18n>Fonte: Sociadade Canadense de Fisiologia do Exercicio, in ACSM (2003)</em>
 
                 <div class="footer">
-                    <button mat-stroked-button>
+                    <button mat-stroked-button [disabled]="f.invalid" >
                         Salvar
                     </button>
                 </div>
