revisões na anamnese

--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -127,7 +127,7 @@
                 <mat-card-subtitle i18n="Label">Nível de Atividade Física</mat-card-subtitle>
               </mat-card-header>
               <mat-card-content>
-                <mat-tab-group>
+                <mat-tab-group  [selectedIndex]="selectedTab">
                   <mat-tab label=" A ">
 
                     <p i18n>Não participa regularmente de atividades esportivas ou recreacionais programadas ou
