--- a/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
+++ b/src/app/avaliation/CardioPulmunar/ymca-banco/ymca-banco.component.scss
@@ -48,15 +48,25 @@
 }
 
 .table {
-  font-size: smaller;
+  font-size: x-small;
   td,
   th {
     border: 1px solid #999;
-    padding: 0.5rem;
+    padding: 1.5px;
   }
 }
 .metronomo-button {
   margin-left: 50px;
+}
+
+@media only screen and (min-width: 426px) {
+  .table {
+    font-size: smaller;
+    td,
+    th {
+      padding: 5px;
+    }
+  }
 }
 
 @media only screen and (min-width: 768px) {
