--- a/src/app/avaliation/componente-morfologica/ircq/ircq.component.scss
+++ b/src/app/avaliation/componente-morfologica/ircq/ircq.component.scss
@@ -41,10 +41,15 @@
 }
 
 .table{
-  font-size: smaller;
+  font-size: x-small;
   td, th {
     border: 1px solid #999;
     padding: 0.5rem;
+  }
+}
+@media only screen and (min-width: 322px){
+  .table{
+    font-size: smaller;
   }
 }
 
