--- a/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.scss
+++ b/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.scss
@@ -47,13 +47,20 @@
 .table{
   width: 100%;
   margin: auto;
-  font-size: smaller;
+  font-size: x-small;
   td, th {
     border: 1px solid #999;
-    padding: 0.5rem;
+    padding: 1.5px;
   }
 }
-
+@media only screen and (min-width: 376px){
+  .table{
+    font-size: smaller;
+    td, th {
+      padding: 5px;
+    }
+  }
+}
 
 @media only screen and (min-width: 768px){
   .section-content{
