--- a/src/app/avaliation/frm/frm.component.scss
+++ b/src/app/avaliation/frm/frm.component.scss
@@ -34,10 +34,10 @@
 .table{
   width: 100%;
   margin: auto;
-  font-size: smaller;
+  font-size: x-small;
   td, th {
     border: 1px solid #999;
-    padding: 0.5rem;
+    padding: 1.5px;
   }
   td{
     text-align: center;
@@ -57,6 +57,15 @@ h5{
   text-align: center;
   font-weight: 600;
   text-decoration: underline;
+}
+
+@media only screen and (min-width: 322px){
+  .table{
+    font-size: smaller;
+    td, th {
+      padding: 5px;
+    }
+  }
 }
 
 @media only screen and (min-width: 768px){
