--- a/src/app/avaliation/anamenese/anamenese.component.html
+++ b/src/app/avaliation/anamenese/anamenese.component.html
@@ -666,7 +666,7 @@
                 </mat-radio-group>
                 <mat-form-field appearance="" style="width: 280px;">
                   <mat-label i18n="Label">Quando foi realizado o último exame?</mat-label>
-                  <input matInput #Q4BDATA="ngModel" name="Q4BDATA" [(ngModel)]="student.Q4BDATA"
+                  <input matInput type="text" #Q4BDATA="ngModel" name="Q4BDATA" [(ngModel)]="student.Q4BDATA"
                     placeholder="Ex: mês passado">
                 </mat-form-field>
                 <mat-form-field class="input-lg">
