--- a/src/app/avaliation/componente-postural/componente-postural.component.html
+++ b/src/app/avaliation/componente-postural/componente-postural.component.html
@@ -1896,6 +1896,7 @@
                                             <mat-select #vlpeplanos="ngModel" name="vlpeplanos"
                                                 [(ngModel)]="newData.vlpeplanos" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1907,6 +1908,7 @@
                                             <mat-select #vlpeplanos="ngModel" name="vlpeplanos"
                                                 [(ngModel)]="newData.vlpeplanos" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1917,6 +1919,7 @@
                                             <mat-select #vlpeplanos="ngModel" name="vlpeplanos"
                                                 [(ngModel)]="newData.vlpeplanos" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1934,6 +1937,7 @@
                                             <mat-select #vlpecavos="ngModel" name="vlpecavos"
                                                 [(ngModel)]="newData.vlpecavos" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1945,6 +1949,7 @@
                                             <mat-select #vlpecavos="ngModel" name="vlpecavos"
                                                 [(ngModel)]="newData.vlpecavos" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1955,6 +1960,7 @@
                                             <mat-select #vlpecavos="ngModel" name="vlpecavos"
                                                 [(ngModel)]="newData.vlpecavos" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1971,6 +1977,7 @@
                                             <mat-select #vlpeequino="ngModel" name="vlpeequino"
                                                 [(ngModel)]="newData.vlpeequino" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1982,6 +1989,7 @@
                                             <mat-select #vlpeequino="ngModel" name="vlpeequino"
                                                 [(ngModel)]="newData.vlpeequino" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
@@ -1992,6 +2000,7 @@
                                             <mat-select #vlpeequino="ngModel" name="vlpeequino"
                                                 [(ngModel)]="newData.vlpeequino" placeholder="selecione">
                                                 <mat-option></mat-option>
+                                                <mat-option value="Bilateral">Bilateral</mat-option>
                                                 <mat-option value="Direito">Direito</mat-option>
                                                 <mat-option value="Esquerdo">Esquerdo</mat-option>
                                             </mat-select>
