--- a/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
+++ b/src/app/avaliation/CardioPulmunar/cooper/cooper.component.html
@@ -176,15 +176,15 @@
                         <tr>
                             <th i18n><span (click)="openDialog('FC Estimada')">FC Estimada</span></th>
                             <td *ngIf="pointer>=1 && !addEval">
-                                {{evaluation[pointer-1].c_fcestimada | number: '': locale}}</td>
-                            <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcestimada | number: '': locale}}</td>
+                                {{evaluation[pointer-1].c_fcestimada | number: '1.0-0': locale}}</td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcestimada | number: '1.0-0': locale}}</td>
                             <td *ngIf="addEval">&nbsp;</td>
                         </tr>
                         <tr>
                             <th i18n><span (click)="openDialog('FC Reserva')">FC Reserva</span></th>
                             <td *ngIf="pointer>=1 && !addEval">
-                                {{evaluation[pointer-1].c_fcreserva | number: '': locale}}</td>
-                            <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva | number: '': locale}}</td>
+                                {{evaluation[pointer-1].c_fcreserva | number: '1.0-0': locale}}</td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].c_fcreserva | number: '1.0-0': locale}}</td>
                             <td *ngIf="addEval">&nbsp;</td>
                         </tr>
                         <tr>
