--- a/src/app/avaliation/CardioPulmunar/ukk/ukk.component.html
+++ b/src/app/avaliation/CardioPulmunar/ukk/ukk.component.html
@@ -29,7 +29,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th i18n>Tempo Final <small>(m:s)</small></th>
+                            <th i18n>Tempo Final <small>(min:s)</small></th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
                                 {{evaluation[pointer-1].c_tempo | mask: '00:00'}}</td>
                             <td *ngIf="editPointer==1 && editAv">
@@ -53,12 +53,12 @@
                         <tr>
                             <th i18n>FC final</th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
-                                {{evaluation[pointer-1].fc | number: '': locale}}</td>
+                                {{evaluation[pointer-1].fc | number: '1.0-0': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
                                 <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
                                     (focus)="$event.target.select()">
                             </td>
-                            <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].fc | number: '': locale}}
+                            <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].fc | number: '1.0-0': locale}}
                             </td>
                             <td *ngIf="editPointer==0 && editAv">
                                 <input name="fc" #fc="ngModel" [(ngModel)]="newEvaluation.fc" type="number"
@@ -160,16 +160,7 @@
             </div>
 
             <div class="section-info">
-<!--                 <mat-card>
-                    <mat-card-header>
-                        <mat-card-title>Especificações</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p><strong>Destinado a: </strong> individuos com baixa condição física, obesos e idosos.</p>
-                        <p><strong>Faixa etária:</strong> 20 a 64 anos, homens e mulheres.</p>
-                        <p><strong>Objetivo:</strong> caminhar o mais rápido possivél o percurso proposto.</p>
-                    </mat-card-content>
-                </mat-card> -->
+
             </div>
         </div>
     </div>
