--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <div class="section-content">
-            <h1 class="h1-title" i18n>Vogel et al (1990) <small>[População feminina]</small></h1>
+            <h1 class="h1-title" i18n>Vogel et al  &nbsp;<small>(1990)[População feminina]</small></h1>
             <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
                 <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
                 <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
@@ -130,10 +130,10 @@
                         </tr>
                         <tr>
                             <th><span (click)="openHelpDialog('Altura')">Altura <small>(m)</small></span></th>
-                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '': locale}}
+                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '1.2-2': locale}}
                             </td>
-                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
-                            <td *ngIf="addEval">{{newEvaluation.altura | number: '': locale}}</td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '1.2-2': locale}}</td>
+                            <td *ngIf="addEval">{{newEvaluation.altura | number: '1.2-2': locale}}</td>
                         </tr>
                         <tr>
                             <th><span (click)="openHelpDialog('Peso corporal')">Peso corporal <small>(Kg)</small></span></th>
@@ -143,7 +143,7 @@
                             <td *ngIf="addEval">{{newEvaluation.peso | number: '': locale}}</td>
                         </tr>
                         <tr>
-                            <th>Idade</th>
+                            <th>Idade <small>(anos)</small></th>
                             <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].idade | number: '': locale}}</td>
                             <td *ngIf="pointer>=0">{{evaluation[pointer].idade | number: '': locale}}</td>
                             <td *ngIf="addEval">{{newEvaluation.idade | number: '': locale}}</td>
@@ -165,7 +165,7 @@
                         </tr>
                         <tr>
                             <td colspan="3">
-                                <small class="advise-sm" i18n>* Todas as medidas são em centimetros</small>
+                                <small class="advise-sm" i18n>* Todas as medidas de perímetros são em centimetros</small>
                             </td>
                         </tr>
                     </tbody>
