--- a/src/app/avaliation/antropometria/weltman-et-al/weltman-et-al.component.html
+++ b/src/app/avaliation/antropometria/weltman-et-al/weltman-et-al.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <div class="section-content">
-            <h1 class="h1-title" i18n>Weltman et al (1988)</h1>
+            <h1 class="h1-title" i18n>Weltman et al &nbsp; <span *ngIf="sex=='M'"> <small> (1988)</small></span><span *ngIf="sex=='F'"> <small> (1989)</small></span></h1>
             <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
                 <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
                 <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
@@ -31,27 +31,9 @@
                         </tr>
                     </thead>
                     <tbody>
-<!--                         <tr>
-                            <th i18n><span (click)="openHelpDialog('Abdominal (umbigo)')">Abdominal (umbigo)</span></th>
-                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
-                                {{evaluation[pointer-1].abdomen2 | number: '': locale}}</td>
-                            <td *ngIf="editPointer==1 && editAv">
-                                <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number" (focus)="$event.target.select()">
-                            </td>
-                            <td *ngIf="pointer>=0 && editPointer!=0">
-                                {{evaluation[pointer].abdomen2 | number: '': locale}}</td>
-                            <td *ngIf="editPointer==0 && editAv">
-                                <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number" (focus)="$event.target.select()">
-                            </td>
-                            <td *ngIf="addEval">
-                                <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
-                                    type="number">
-                            </td>
-                        </tr> -->
+
                         <tr>
-                            <th i18n><span (click)="openHelpDialog('Abdominal (cintura)')">Abdominal (cintura) <small>(cm)</small></span>
+                            <th i18n><span (click)="openHelpDialog('Abdominal')">Abdominal</span>
                             </th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
                                 {{evaluation[pointer-1].abdomen | number: '': locale}}</td>
@@ -73,12 +55,72 @@
                             </td>
                         </tr>
 
+                        <tr>
+                            <th i18n><span (click)="openHelpDialog('Cintura')">Cintura</span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].cintura | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">
+                                {{evaluation[pointer].cintura | number: '': locale}}</td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="cintura" #cintura="ngModel" [(ngModel)]="newEvaluation.cintura"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <th i18n><span (click)="openHelpDialog('Quadril')">Quadril</span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].quadril | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">
+                                {{evaluation[pointer].quadril | number: '': locale}}</td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="quadril" #quadril="ngModel" [(ngModel)]="newEvaluation.quadril"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                        </tr>
+
+                        <tr *ngIf="sex ==='M'">
+                            <th i18n><span (click)="openHelpDialog('Perímetros Ilíacos')">Perímetros Ilíacos</span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].per_iliacos | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="per_iliacos" #per_iliacos="ngModel" [(ngModel)]="newEvaluation.per_iliacos"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">
+                                {{evaluation[pointer].per_iliacos | number: '': locale}}</td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="per_iliacos" #per_iliacos="ngModel" [(ngModel)]="newEvaluation.per_iliacos"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="per_iliacos" #per_iliacos="ngModel" [(ngModel)]="newEvaluation.per_iliacos"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                        </tr>
+
                         <tr *ngIf="sex ==='F'">
                             <th i18n><span (click)="openHelpDialog('Altura')">Altura <small>(m)</small></span></th>
-                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '': locale}}
+                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '1.2-2': locale}}
                             </td>
-                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
-                            <td *ngIf="addEval">{{ newEvaluation.altura | number: '': locale }}</td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '1.2-2': locale}}</td>
+                            <td *ngIf="addEval">{{ newEvaluation.altura | number: '1.2-2': locale }}</td>
                         </tr>                        
                         <tr>
                             <th i18n><span (click)="openHelpDialog('Peso corporal')">Peso corporal <small>(Kg)</small></span></th>
@@ -87,7 +129,7 @@
                             <td *ngIf="addEval">{{ newEvaluation.peso | number: '': locale}}</td>
                         </tr>
                         <tr>
-                            <th>Idade</th>
+                            <th>Idade <small>(anos)</small></th>
                             <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].idade | number: '': locale}}</td>
                             <td *ngIf="pointer>=0">{{evaluation[pointer].idade | number: '': locale}}</td>
                             <td *ngIf="addEval">{{ age | number: '': locale}}</td>
@@ -106,6 +148,11 @@
                                     (action)="executeAction($event, evaluation[pointer], 0)"></app-edit-del-form>
                             </td>
                             <td *ngIf="addEval">&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <small class="advise-sm" i18n>* Todas as medidas de perímetros são em centimetros</small>
+                            </td>
                         </tr>
 
                     </tbody>
